Intersection/dev_only/ROS2_drone_dev/deis_ws2/log/build_2020-12-11_22-31-39/py_intersection_mgr/stderr.log
  File "/home/ubuntu/deis_ws2/install/py_intersection_mgr/lib/python3.8/site-packages/py_intersection_mgr/intersection_mgr.py", line 95
    if self.no_ref && 94 in markerIds:
                    ^
SyntaxError: invalid syntax

